<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_summary"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/summary_menu" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history_menu" />

    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_menu" />

    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/calendar_menu" />

    <item
        android:id="@+id/action_faq"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/help_menu" />
</menu>